--- a/Tuan02/HTML/bai13.html
+++ b/Tuan02/HTML/bai13.html
@@ -20,7 +20,29 @@
 </head>
 <body>
     <div class="wrapper">
-
+        <form>
+            <label>Name:<br>
+                <input type="text" name ="name">
+            </label>
+            <br>
+            <br>
+            <label>Telephone Number:<br>
+                <input type="tel" name ="Tel">
+            </label>
+            <br>
+            <br>
+            <label>Favorite Color:<br>
+                <input type="color" name ="color">
+            </label>
+            <br>
+            <br>
+            <label>Date of Birth:<br>
+                <input type="date" name ="date">
+            </label>
+            <br>
+            <br>
+            <input type="submit" value="Sumbmit">
+        </form>
     </div>
 </body>
 </html>
