--- a/Tuan02/HTML/bai17.html
+++ b/Tuan02/HTML/bai17.html
@@ -20,7 +20,78 @@
 </head>
 <body>
     <div class="wrapper">
+        <h1>a.</h1>
 
+    <form style="background-color: rgba(234, 172, 56, 0.626);">
+        <h2 align="center">Survey Form</h2>
+        <p>If you are interested in purchasing one or more of our products, before ordering please complete some or all of the following survey for our marketing department. Answering any question is optional, and all information will be kept strictly confidential.
+            Thank you very much for your time!
+        </p>
+        <ol type="1">
+            <li>What is your name?<br><input type="text"></li>
+            <li>What is your date of birth?<br>Month<select><option>January</option><option>February</option></select> Date
+                <select><option>1</option><option>2</option></select>Year<input type="text" value="19"></li>
+            <li>What is your mailing address (if you would like to have a hard copy of our catalogsent to you)?<br>
+                <textarea rows="4" cols="50">Number/P.O. Box/Route:
+Street/Avenve/Road:
+City:
+State/Zip:
+                </textarea>
+            </li>
+            <li>What is your email address?<br><input type="text"></li>
+            <li>Have you viewed our online product catalog?<br>
+                <input type="radio" value="Yes">Yes
+                <input type="radio" value="No">No
+            </li>
+            <li>If so, what product(s), besides the one you are ordering, might you be interested in purchasing in the future? (Check all that apply.)<br>
+                <input type="checkbox" value="VCR">VCR<br>
+                <input type="checkbox" value="Big Screen TV">Big Screen TV<br>
+                <input type="checkbox" value="Audio Equipment">Audio Equipment<br>
+                <input type="checkbox" value="Video Equipment">Video Equipment<br>
+                <input type="checkbox" value="Camera Equipment">Camera Equipment<br>
+                <input type="checkbox" value="Other">Other
+                <input type="text" value="Please List:">
+            </li>
+            <li>Do you have any question, comments or suggestions before proceeding to the Other Form?<br>
+                <textarea rows="5" cols="50">Your Input:</textarea>
+            </li>
+        </ol>
+        <p align="center"><input type="submit" value="Send Form"> &#160;
+            <input type="reset" value="Clear Form"></p>
+    </form>
+    <br>
+
+<hr>
+<h1>b.</h1>
+
+    <form>
+        <p>Browser:
+            <select name="" id="">            
+            <option value="">Google</option>
+            <option value=""></option>
+            <option value=""></option>
+            </select>
+        </p>
+        <p>User name:<input type="text" name="txtUname" id="textUname"></p>
+        <p>Encryption:
+            <select name="" id="">
+                <option value="">2048 (High Grade) </option>
+                <option value=""></option>
+            </select>
+        </p>
+        0<input type="range" min="0" max="100">100<br><br>
+        <p>Birth day:</p>
+        <input type="date" name="txtDate" value="" size="20" maxlength="20 ">
+        <p>Select your favorite color:</Select><input type="color" name=" txtColor" value="" size="20" maxlength="20"></p>
+        <p>Birthday (month and year):<input type="text" value="------- ----"></p>
+        <p>Select a week:<input type="text" value="week --, ----"></p>
+        <p>Select a time:<input type="text" value="--:-- --"></p>
+        <p>E-mail:<input type="text"></p>
+        <p>Search Google:<input type="text"></p>
+        <p>Telephone:<input type="text"></p>
+        <p>Add your homepage:<input type="text"></p>
+        <p><input type="Submit" value="Submit"></p>
+    </form>
     </div>
 </body>
 </html>
