--- a/Tuan02/HTML/bai12.html
+++ b/Tuan02/HTML/bai12.html
@@ -20,7 +20,14 @@
 </head>
 <body>
     <div class="wrapper">
-
+        <form>
+            <label>Name:<br>
+                <input type="text" name ="name"pattern="[A-Za-z]{5}"  placeholder="Thanh Van" title="Please fill out this field">
+            </label>
+            <br>
+            <br>
+            <input type="submit" value="Submit">
+        </form>
     </div>
 </body>
 </html>
