--- a/Tuan02/HTML/bai18.html
+++ b/Tuan02/HTML/bai18.html
@@ -20,7 +20,15 @@
 </head>
 <body>
     <div class="wrapper">
-
+        <form action="" method="get" name="frmInfo">
+            Please indicate your area of interest:<br>
+            <input type="text" name="txtName" value="" size="20" maxlength="20" list="tech">
+            <datalist id="tech">
+                <option value="CSS">
+                <option value="HTML">
+                <option value="JavaScript">
+            </datalist>
+        </form>
     </div>
 </body>
 </html>
