Add existing file

--- a/Tuan02/HTML/bai19.html
+++ b/Tuan02/HTML/bai19.html
@@ -19,8 +19,26 @@
     </style>
 </head>
 <body>
+    
     <div class="wrapper">
-
+        <div>
+            <p>mp4</p>
+            <video poster="resource/star.png" controls>
+                <source src="https://www.html5rocks.com/en/tutorials/video/basics/Chrome_ImF.mp4" type="video/mp4"; codecs="avc1.42E01E , mp4.40.2"/>
+            </video>
+        </div>
+       <div>
+        <p>webm</p>
+        <video poster="resource/star.png" controls>
+            <source src="https://www.html5rocks.com/en/tutorials/video/basics/Chrome_ImF.webm" type="video/webm"; codecs="vp8 , vorbis"/>
+        </video>
+       </div>
+       <div>
+        <p>.ogv</p>
+        <video poster="resource/star.png" controls>
+            <source src="https://www.html5rocks.com/en/tutorials/video/basics/Chrome_ImF.ogv" type="video/ogg"; codecs="theora, vorbis"/>
+        </video>
+       </div>
     </div>
 </body>
 </html>
