--- a/Tuan02/HTML/bai20.html
+++ b/Tuan02/HTML/bai20.html
@@ -20,7 +20,8 @@
 </head>
 <body>
     <div class="wrapper">
-
+        <iframe width="420px" height="315px" src="https://www.youtube.com/embed/J---aiyznGQ" frameborder="0" allowfullscreen></iframe>
+        
     </div>
 </body>
 </html>
